[gd_scene load_steps=31 format=3 uid="uid://djoskhwta4feb"]

[ext_resource type="Script" uid="uid://c0mark4wfl2sk" path="res://scripts/mech.gd" id="1_dqpf0"]
[ext_resource type="Texture2D" uid="uid://gtm5ho1n18i1" path="res://sprites/mech_attack.png" id="2_cdjsb"]
[ext_resource type="Texture2D" uid="uid://b4mt5nfcggurh" path="res://sprites/mech_attack_warning.png" id="3_cdjsb"]
[ext_resource type="Texture2D" uid="uid://egb56rc8jw7c" path="res://sprites/mech_death.png" id="3_xkq0j"]
[ext_resource type="Texture2D" uid="uid://udil7q3jq1n5" path="res://sprites/mech_idle.png" id="4_edian"]
[ext_resource type="Texture2D" uid="uid://ddc6bfmlqx85e" path="res://sprites/mech_walking.png" id="5_a2oj4"]
[ext_resource type="AudioStream" uid="uid://4k3otniax6tb" path="res://music/mech_laser.wav" id="7_xkq0j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cdjsb"]
atlas = ExtResource("2_cdjsb")
region = Rect2(0, 0, 2000, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2oj4"]
atlas = ExtResource("2_cdjsb")
region = Rect2(2000, 0, 2000, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q122c"]
atlas = ExtResource("2_cdjsb")
region = Rect2(4000, 0, 2000, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxw7m"]
atlas = ExtResource("2_cdjsb")
region = Rect2(6000, 0, 2000, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkq0j"]
atlas = ExtResource("3_cdjsb")
region = Rect2(0, 0, 2000, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_edian"]
atlas = ExtResource("3_cdjsb")
region = Rect2(2000, 0, 2000, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tah5h"]
atlas = ExtResource("3_xkq0j")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wcai"]
atlas = ExtResource("3_xkq0j")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v0ps"]
atlas = ExtResource("3_xkq0j")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q062n"]
atlas = ExtResource("3_xkq0j")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yynfm"]
atlas = ExtResource("3_xkq0j")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogfb8"]
atlas = ExtResource("4_edian")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7o67d"]
atlas = ExtResource("4_edian")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jaid"]
atlas = ExtResource("4_edian")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_66obp"]
atlas = ExtResource("5_a2oj4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhygc"]
atlas = ExtResource("5_a2oj4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4j4l1"]
atlas = ExtResource("5_a2oj4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_a5p5h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdjsb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2oj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q122c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxw7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q122c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2oj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdjsb")
}],
"loop": false,
"name": &"attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkq0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edian")
}],
"loop": true,
"name": &"attack_warning",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tah5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wcai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7v0ps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q062n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yynfm")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogfb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7o67d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jaid")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_66obp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhygc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4j4l1")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ludtu"]
radius = 76.05919

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ludtu"]
size = Vector2(39, 36)

[sub_resource type="CircleShape2D" id="CircleShape2D_axwnf"]
radius = 11.011357

[sub_resource type="CircleShape2D" id="CircleShape2D_hojqu"]
radius = 94.00532

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cdjsb"]
size = Vector2(968, 17)

[node name="CharacterBody2D" type="CharacterBody2D" groups=["enemy", "mech"]]
collision_layer = 6
collision_mask = 6
script = ExtResource("1_dqpf0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -1)
sprite_frames = SubResource("SpriteFrames_a5p5h")
animation = &"attack"
frame = 4
frame_progress = 0.2257693

[node name="detrection zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detrection zone"]
shape = SubResource("CircleShape2D_ludtu")

[node name="hitbox" type="Area2D" parent="."]

[node name="hitbox" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-1.5, -1)
shape = SubResource("RectangleShape2D_ludtu")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0.31764707, 0.91764706, 0, 1)
offset_left = -8.999999
offset_top = 13.0
offset_right = 190.99998
offset_bottom = 53.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0.5)
shape = SubResource("CircleShape2D_axwnf")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 4.0
target_desired_distance = 8.0
avoidance_enabled = true

[node name="storm_detector" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="storm_detector"]
shape = SubResource("CircleShape2D_hojqu")

[node name="LaserRay" type="RayCast2D" parent="."]
position = Vector2(0, -1)
target_position = Vector2(979, 1)

[node name="LaserRayTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="AttackWarningTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserArea" type="Area2D" parent="."]

[node name="right" type="CollisionShape2D" parent="LaserArea"]
position = Vector2(498, 0.5)
shape = SubResource("RectangleShape2D_cdjsb")

[node name="left" type="CollisionShape2D" parent="LaserArea"]
position = Vector2(-502, 0)
shape = SubResource("RectangleShape2D_cdjsb")

[node name="LaserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_xkq0j")
volume_db = -14.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="detrection zone" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="detrection zone" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="area_entered" from="storm_detector" to="." method="_on_storm_detector_area_entered"]
[connection signal="area_exited" from="storm_detector" to="." method="_on_storm_detector_area_exited"]
[connection signal="body_entered" from="storm_detector" to="." method="_on_storm_detector_body_entered"]
[connection signal="body_exited" from="storm_detector" to="." method="_on_storm_detector_body_exited"]
[connection signal="timeout" from="LaserRayTimer" to="." method="_on_laser_ray_timer_timeout"]
[connection signal="timeout" from="AttackWarningTimer" to="." method="_on_attack_warning_timer_timeout"]
[connection signal="body_entered" from="LaserArea" to="." method="_on_laser_area_body_entered"]
